assignments/hw/hw3-signals/grade
0/ 100
compile error:

./src/rshell.cpp: In function ‘void get_short_home(std::string&)’:
./src/rshell.cpp:60:47: error: ‘secure_getenv’ was not declared in this scope
     if (NULL == (home = secure_getenv(HOME_DIR))) {
                                               ^
./src/rshell.cpp: In function ‘bool home_dir()’:
./src/rshell.cpp:720:47: error: ‘secure_getenv’ was not declared in this scope
     if (NULL == (home = secure_getenv(HOME_DIR))) {
                                               ^
./src/rshell.cpp: In function ‘bool prev_dir(const string&)’:
./src/rshell.cpp:735:45: error: ‘secure_getenv’ was not declared in this scope
     if (NULL == (curr = secure_getenv(OLD_WD))) {
                                             ^
./src/rshell.cpp:738:46: error: ‘secure_getenv’ was not declared in this scope
     if (NULL == (prev = secure_getenv(CURR_WD))) {
                                              ^
./src/rshell.cpp: In function ‘bool path_dir(const string&)’:
./src/rshell.cpp:770:52: error: ‘secure_getenv’ was not declared in this scope
     if (NULL == (save_OLD_WD = secure_getenv(OLD_WD))) {
                                                    ^
make: *** [rshell] Error 1
